<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gq.codester.maris.audiobookreviewzy.RegisterActivity"
    android:background="@color/colorPrimaryDark">


    <ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <RelativeLayout
        android:id="@+id/lin1"
        android:layout_width="368dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="ObsoleteLayoutParam">

        <ImageView
            android:id="@+id/imgRegLogo"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/img"
            android:contentDescription="@string/apps_logo"/>

        <TextView
            android:id="@+id/tvReg"
            android:text="@string/register"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgRegLogo"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/edName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReg"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/your_name"
            android:inputType="text"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/edName2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvReg"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:layout_toRightOf="@id/edName"
            android:hint="@string/your_surname"
            android:inputType="text"
            android:padding="10dp"
            tools:ignore="RtlHardcoded" />


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edName"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/edLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edEmail"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/login"
            android:inputType="text"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/edPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edLogin"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/edDOBD"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edPass"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/dd"
            android:inputType="date"
            android:padding="10dp"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/edDOBM"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edPass"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/mm"
            android:inputType="date"
            android:padding="10dp"
            android:layout_toRightOf="@id/edDOBD"
            android:maxLength="2"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edDOBY"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/edPass"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_ed"
            android:hint="@string/yyyy"
            android:inputType="date"
            android:padding="10dp"
            android:layout_toRightOf="@id/edDOBM"
            android:maxLength="4"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_margin="10dp"
            android:layout_below="@id/edDOBD"
            android:layout_alignParentRight="true"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv1"
            android:text="@string/already_registered_click_here_to_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edDOBD"
            android:textColor="#ffffff"
            android:paddingTop="15dp"
            />

    </RelativeLayout>

</ScrollView>

</android.support.constraint.ConstraintLayout>
