<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/purple"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">
    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/users_picture"/>

    <TextView
        android:id="@+id/nav_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/username"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/user_pic"/>

    <TextView
        android:id="@+id/nav_username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nav_username"/>

</RelativeLayout>

</LinearLayout>
